# fastapi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plan/: 2026-05-27-implementation.md
docs/spec/: fastapi-package-specification.md
example-app/: README.md  main.py  pyproject.toml
src/poli_page_fastapi/: __init__.py  _headers.py  dependencies.py  exceptions.py  lifespan.py  responses.py  settings.py
tests/: conftest.py
tests/integration/: test_render_against_develop_api.py
tests/unit/: conftest.py  test_dependencies.py  test_exceptions.py  test_headers.py  test_lifespan.py  test_responses.py  test_settings.py
