[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "poli-page-fastapi"
dynamic = ["version"]
description = "FastAPI integration for the Poli Page PDF rendering API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Poli Page" }]
keywords = ["pdf", "html", "template", "rendering", "poli-page", "fastapi", "starlette"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100,<1.0",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "poli-page>=0.9,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.25",
    "ruff>=0.6",
    "mypy>=1.10",
    "respx>=0.21",
    "python-dotenv>=1.0",
    "build>=1",
    "twine>=5",
]

[project.urls]
Homepage = "https://poli.page"
Documentation = "https://docs.poli.page/reference/sdk/python/"
Source = "https://github.com/poli-page/fastapi"
Issues = "https://github.com/poli-page/fastapi/issues"
Changelog = "https://github.com/poli-page/fastapi/blob/main/CHANGELOG.md"

[tool.uv.sources]
# poli-page isn't on PyPI yet. Point uv at the sibling checkout for local dev;
# remove this block once the SDK ships and the `poli-page>=0.9,<2` dep resolves
# from PyPI normally. See CLAUDE.md §9.
poli-page = { path = "../sdk-python", editable = true }

[tool.hatch.version]
source = "regex"
path = "src/poli_page_fastapi/_version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/poli_page_fastapi"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017"]
"example-app/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
testpaths = ["tests"]
markers = ["integration: hits the live API; requires POLI_PAGE_API_KEY"]
